welcome.lessons.welcome.variables.Variables.scala.code
while(!estSurBiscuit){
	
	var nbPas:Int = 0
	nbPas = nbPas + 1
	avance()
}
if (estSurBiscuit){
	prendBiscuit()
}
while(nbPas != 0){
	recule()
	
}
